# nevoflux-agent

./: .gitignore  Cargo.toml  Cross.toml  README.md  justfile  nul
crates/brain/: Cargo.toml
crates/brain/src/: engine.rs  enrichment.rs  error.rs  ingest.rs  lib.rs  types.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: async_proxy.rs  chunking.rs  config.rs  daemon_client.rs  error.rs  lib.rs  mcp_bridge.rs  native_messaging.rs  port_discovery.rs  proxy.rs  streaming.rs
crates/builtin-wasm/: Cargo.toml
crates/builtin-wasm/prompts/: agent.md  browser.md  chat.md  computer_use_examples.md  computer_use_guide.md  computer_use_overview.md  subagent_agent.md  subagent_browser.md
crates/builtin-wasm/prompts/agents/: explorer.md  reader.md  researcher.md  worker.md
crates/builtin-wasm/src/: agent.rs  host.rs  lib.rs  types.rs
crates/computer/: Cargo.toml
crates/computer/src/: error.rs  lib.rs  linux.rs  macos.rs  mock.rs  traits.rs  types.rs  windows.rs
crates/daemon/: Cargo.toml
crates/daemon/config/: default.toml
crates/daemon/recipes/: x_com.yaml
crates/daemon/src/: agent_exec.rs  agent_host.rs  antigravity_setup.rs  brain_rpc.rs  brain_share_rpc.rs  brain_tools.rs  browser_launch.rs  config.rs  config_watcher.rs  error.rs  file_picker.rs  health.rs  init_brain.rs  kb_wizard.rs  lib.rs  llm_gateway.rs  mcp_config.rs  memory_reindex.rs  notify.rs  openclaw_setup.rs  paths.rs  permission.rs  registry.rs  retry.rs  router.rs  secrets.rs  server.rs  skills.rs  validation.rs
crates/daemon/src/agent/: abi.rs  auth.rs  computer_tools.rs  flows.rs  mod.rs  roles.rs  runner.rs  soul_resolver.rs  soul_rpc.rs  space_souls.rs  streaming.rs  tools.rs
crates/daemon/src/asset_server/: auth.rs  inbox.rs  mod.rs  oauth.rs  port.rs  state.rs  token_store.rs
crates/daemon/src/automation/: bundle.rs  capture.rs  mod.rs  policy.rs  session.rs  session_holder.rs  taint.rs
crates/daemon/src/brain_share/: crypto.rs  http_client.rs  manifest.rs  mod.rs  nbrain_format.rs  pack.rs  service.rs  strip.rs
crates/daemon/src/canvas_persist/: handlers.rs  mod.rs  service.rs
crates/daemon/src/canvas_tools/: audit.rs  executor.rs  mod.rs  param_validator.rs  registry.rs  toml_parser.rs  types.rs  user_writer.rs  validator.rs
crates/daemon/src/canvas_video/: asset_inline.rs  asset_resize.rs  create.rs  design.rs  ffmpeg.rs  frame_chunks.rs  handlers.rs  job.rs  mod.rs  render.rs  reveal.rs  service.rs  tool.rs  vi_to_design.rs
crates/daemon/src/context/: builder.rs  circuit_breaker.rs  compressor.rs  microcompact.rs  mod.rs
crates/daemon/src/dev_instance/: mod.rs
crates/daemon/src/eval/: config.rs  lock.rs  mod.rs  run_dir.rs
crates/daemon/src/eval_bridge/: mod.rs  routes.rs  sse.rs  state.rs
crates/daemon/src/eval_dispatch/: DESIGN_NOTES.md  mock_llm_server.rs  mod.rs
crates/daemon/src/event_bus/: bus.rs  mod.rs  permissions.rs  persistent.rs  ring_buffer.rs  topic.rs  types.rs
crates/daemon/src/gbrain/: config.rs  engine.rs  mcp_client.rs  mod.rs  page_index.rs  supervisor.rs
crates/daemon/src/goals/: check.rs  evaluator.rs  events.rs  manager.rs  mod.rs  tools.rs
crates/daemon/src/http/: metrics.rs  mod.rs  queue.rs  router.rs  rpc.rs  types.rs
crates/daemon/src/learning/: buffer.rs  collector.rs  conflict.rs  consolidator.rs  crypto.rs  decay.rs  export.rs  mod.rs  pipeline.rs  retriever.rs  routing.rs  session_extractor.rs  source.rs  sources.rs  types.rs
crates/daemon/src/loops/: combinator.rs  dynamic.rs  events.rs  evolve.rs  executor.rs  expression.rs  gate.rs  manager.rs  mod.rs  registry.rs  scheduler.rs  sweep.rs  tool_classes.rs  (+2 more)
crates/daemon/tests/: antigravity_e2e.rs  brain_share_live.rs  canvas_persist.rs  canvas_share_live.rs  canvas_video.rs  canvas_video_p2.rs  canvas_video_p3.rs  canvas_video_poc.rs  design_template_parse.rs  eval_bridge_smoke.rs  file_picker_integration.rs  llm_e2e.rs  managed_idle_terminate.rs  pack_foundations.rs  pack_integration.rs  pack_rpc_validate.rs  recording_e2e.rs  recording_split.rs  subagent_roles_integration.rs  video_skill_load.rs
crates/eval/: Cargo.toml
crates/eval/src/: error.rs  lib.rs  main.rs  reporter.rs  runner.rs  termination.rs
crates/eval/tests/: eval_e2e_smoke.rs  smoke_test.rs
crates/llm/: Cargo.toml
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: acp_upstream.rs  embedding_dim.rs  error.rs  handlers.rs  lib.rs  main.rs  protocol.rs  server.rs  translate.rs
crates/llm-gateway/tests/: embeddings_test.rs  error_handling_test.rs  live_smoke_test.rs  models_test.rs  multi_turn_test.rs  protocol_test.rs  translate_test.rs
crates/llm/src/: embedding.rs  error.rs  factory.rs  lib.rs  util.rs
crates/llm/tests/: acp_provider.rs  claude_code_provider.rs  gemini_cli_provider.rs  integration.rs  kimi_agent_e2e.rs  kimi_agent_provider.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: backend.rs  client.rs  command.rs  error.rs  lib.rs  manager.rs  registry.rs  rmcp_adapter.rs  search.rs  server.rs  tools.rs  types.rs
crates/mcp/tests/: integration.rs  rmcp_validation.rs
crates/pack/: Cargo.toml
crates/pack/src/: capability.rs  error.rs  host.rs  lib.rs  lifecycle.rs  manifest.rs  paths.rs  receipt.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: canvas_persist.rs  canvas_share.rs  canvas_tools.rs  canvas_video.rs  channel.rs  chat.rs  common.rs  envelope.rs  error.rs  eval_events.rs  events.rs  execution_tier.rs  extract.rs  json_repair.rs  lib.rs  mcp.rs  subagent.rs  tools.rs  tts.rs
crates/protocol/tests/: proptest_envelopes.rs  proptest_serialization.proptest-regressions  proptest_serialization.rs  wire_compat.rs
crates/skills/: Cargo.toml
crates/skills/src/: error.rs  lib.rs  loader.rs  parser.rs  registry.rs  tool_check.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: connection.rs  error.rs  lib.rs  migrations.rs  storage.rs  vector.rs
crates/storage/tests/: integration.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs  mock_pack_host.rs
crates/testing/tests/: pack_lifecycle.rs  pack_reversibility.rs  pack_security.rs
(+357 files in other folders)
