# Cargo.toml (workspace root)

[package]
name = "nevoflux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NevoFlux Native Agent - AI-powered browser assistant"

[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/storage",
    "crates/llm",
    "crates/testing",
    "crates/mcp",
    "crates/daemon",
    "crates/bridge",
    "crates/skills",
    "crates/computer",
    "crates/builtin-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/user/nevoflux-agent"

[workspace.dependencies]
# LLM Framework
rig-core = { version = "0.29", default-features = false, features = ["reqwest-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"

# Error handling
thiserror = "2"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Testing
proptest = "1"
test-case = "3"

# Mocking
mockall = "0.13"

# ZeroMQ
zeromq = "0.5"

# UUID
uuid = { version = "1", features = ["v4"] }

# Platform directories
directories = "5"

# Glob patterns
glob = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File locking
fs2 = "0.4"

# Wasmtime
wasmtime = "27"
wasmtime-wasi = "27"

[[bin]]
name = "nevoflux-agent"
path = "src/main.rs"

[dependencies]
nevoflux-daemon = { path = "crates/daemon" }
nevoflux-bridge = { path = "crates/bridge" }
nevoflux-mcp = { path = "crates/mcp" }
nevoflux-protocol = { path = "crates/protocol" }
nevoflux-storage = { path = "crates/storage" }
clap = { workspace = true }
clap_complete = "4"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
fs2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
serial_test = "3"
assert_cmd = "2"
predicates = "3"
wat = "1"
tokio = { workspace = true }
futures = { workspace = true }
nevoflux-bridge = { path = "crates/bridge" }
nevoflux-computer = { path = "crates/computer" }
nevoflux-daemon = { path = "crates/daemon" }
nevoflux-llm = { path = "crates/llm" }
nevoflux-mcp = { path = "crates/mcp" }
nevoflux-protocol = { path = "crates/protocol" }
