# Cargo.toml (workspace root)

[package]
name = "nevoflux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NevoFlux Native Agent - AI-powered browser assistant"

[workspace]
resolver = "2"
members = [
    "crates/bridge",
    "crates/builtin-wasm",
    "crates/computer",
    "crates/daemon",
    "crates/eval",
    "crates/llm",
    "crates/mcp",
    "crates/protocol",
    "crates/skills",
    "crates/storage",
    "crates/testing",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/dorisgyl/nevoflux-agent"

[workspace.dependencies]
# LLM Framework
rig-core = { version = "0.29", default-features = false, features = ["reqwest-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "rustls-tls-native-roots"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Testing
proptest = "1"
test-case = "3"

# Mocking
mockall = "0.13"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP server
axum = { version = "0.7" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }

# Platform directories
directories = "5"

# Glob patterns
glob = "0.3"

# Regex engine (recipe pattern validation)
regex = "1.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File locking
fs2 = "0.4"

# Lazy global initialization
once_cell = "1"

# Wasmtime
wasmtime = "27"
wasmtime-wasi = "27"

[features]
default = ["embedding"]
embedding = ["nevoflux-daemon/embedding"]
eval-mock-llm = ["nevoflux-daemon/eval-mock-llm"]

[[bin]]
name = "nevoflux-agent"
path = "src/main.rs"

[dependencies]
nevoflux-daemon = { path = "crates/daemon", default-features = false }
nevoflux-bridge = { path = "crates/bridge" }
nevoflux-llm = { path = "crates/llm" }
nevoflux-mcp = { path = "crates/mcp" }
nevoflux-skills = { path = "crates/skills" }
nevoflux-protocol = { path = "crates/protocol" }
nevoflux-storage = { path = "crates/storage" }
clap = { workspace = true }
clap_complete = "4"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
fs2 = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
serial_test = "3"
assert_cmd = "2"
predicates = "3"
wat = "1"
tokio = { workspace = true }
futures = { workspace = true }
nevoflux-bridge = { path = "crates/bridge" }
nevoflux-computer = { path = "crates/computer" }
nevoflux-daemon = { path = "crates/daemon" }
nevoflux-llm = { path = "crates/llm" }
nevoflux-mcp = { path = "crates/mcp" }
nevoflux-protocol = { path = "crates/protocol" }
