# Cargo.toml (workspace root)

[package]
name = "nevoflux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NevoFlux Native Agent - AI-powered browser assistant"

[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/storage",
    "crates/llm",
    "crates/llm-gateway",
    "crates/testing",
    "crates/mcp",
    "crates/daemon",
    "crates/bridge",
    "crates/brain",
    "crates/skills",
    "crates/pack",
    "crates/computer",
    "crates/builtin-wasm",
]

[workspace.package]
version = "0.3.5"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/dorisgyl/nevoflux-agent"

[workspace.dependencies]
# LLM Framework
rig-core = { version = "0.29", default-features = false, features = ["reqwest-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"

# Error handling
thiserror = "2"

# Encryption (XChaCha20-Poly1305 for .nbrain knowledge-base sharing)
chacha20poly1305 = "0.10"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "rustls-tls-native-roots"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Testing
proptest = "1"
test-case = "3"

# Mocking
mockall = "0.13"

# UUID
uuid = { version = "1", features = ["v4"] }

# Platform directories
directories = "5"

# Glob patterns
glob = "0.3"

# Regex engine (recipe pattern validation)
regex = "1.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File locking
fs2 = "0.4"

# Wasmtime
wasmtime = "27"
wasmtime-wasi = "27"

[features]
default = ["embedding", "ort-load-dynamic"]
embedding = ["nevoflux-daemon/embedding"]
# ONNX Runtime linking strategy, forwarded to nevoflux-daemon. Pick one:
#   * ort-load-dynamic (default): load libonnxruntime at startup via
#     ORT_DYLIB_PATH or bundled next to the exe (runs on glibc >= 2.27).
#   * ort-download-binaries: statically link a prebuilt ONNX Runtime
#     (rc.12 needs glibc >= 2.38). Self-contained static build:
#       cargo build --no-default-features --features "embedding,ort-download-binaries"
ort-download-binaries = ["nevoflux-daemon/ort-download-binaries"]
ort-load-dynamic = ["nevoflux-daemon/ort-load-dynamic"]

[[bin]]
name = "nevoflux-agent"
path = "src/main.rs"

[dependencies]
nevoflux-daemon = { path = "crates/daemon", default-features = false }
nevoflux-bridge = { path = "crates/bridge" }
nevoflux-mcp = { path = "crates/mcp" }
nevoflux-skills = { path = "crates/skills" }
nevoflux-protocol = { path = "crates/protocol" }
nevoflux-storage = { path = "crates/storage" }
clap = { workspace = true }
clap_complete = "4"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
fs2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
serial_test = "3"
assert_cmd = "2"
predicates = "3"
wat = "1"
tokio = { workspace = true }
futures = { workspace = true }
nevoflux-bridge = { path = "crates/bridge" }
nevoflux-computer = { path = "crates/computer" }
nevoflux-daemon = { path = "crates/daemon" }
nevoflux-llm = { path = "crates/llm" }
nevoflux-mcp = { path = "crates/mcp" }
nevoflux-protocol = { path = "crates/protocol" }
