[package]
name = "nevoflux-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NevoFlux knowledge-base abstraction crate (BrainEngine trait + ingest/enrichment hooks)"
publish = false

[lib]
name = "nevoflux_brain"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# `chrono` is not in [workspace.dependencies]; pin inline (matches daemon's pin).
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
