[package]
name = "nevoflux-bridge"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Proxy and MCP bridge for NevoFlux Agent"

[dependencies]
nevoflux-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "io-util", "io-std", "fs", "process", "signal", "net"] }
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing = "0.1"
tokio-util = { version = "0.7", features = ["net"] }
uuid.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
