# crates/daemon/Cargo.toml

[package]
name = "nevoflux-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Core daemon for NevoFlux Agent"

[dependencies]
# Internal crates
nevoflux-protocol = { path = "../protocol" }
nevoflux-storage = { path = "../storage" }
nevoflux-mcp = { path = "../mcp" }
nevoflux-skills = { path = "../skills" }
nevoflux-llm = { path = "../llm" }
nevoflux-computer = { path = "../computer" }
nevoflux-builtin-wasm = { path = "../builtin-wasm" }

# LLM framework
rig-core = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "signal", "fs"] }
async-trait.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true

# Random number generation (for retry jitter)
rand = "0.8"

# Logging
tracing = "0.1"

# ZeroMQ
zeromq = { workspace = true }
bytes = "1"

# Wasmtime
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# File glob matching
glob = "0.3"

# Configuration file support
dirs = "5.0"
toml = "0.8"

# File watching for hot config reloading
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
nevoflux-testing = { path = "../testing" }
wat = "1"
tempfile = "3"
