[package]
name = "nevoflux-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NevoFlux evaluation harness — benchmarks, judges, signal-graded reports"

[[bin]]
name = "nevoflux-eval"
path = "src/main.rs"

[dependencies]
# Workspace crates
nevoflux-protocol = { path = "../protocol" }

# Async / HTTP
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Errors / logging
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }

# CLI / paths
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
directories = { workspace = true }

bytes = "1"
async-stream = "0.3"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }
