[package]
name = "nevoflux-llm-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local OpenAI-compatible HTTP gateway translating to Anthropic Messages upstream"
publish = false

[lib]
name = "nevoflux_llm_gateway"
path = "src/lib.rs"

[[bin]]
name = "nevoflux-llm-gateway"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
bytes = "1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Errors / logging
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (for upstream)
reqwest = { workspace = true }

# HTTP-date parsing for `Retry-After` (RFC 7231 date format).
httpdate = "1"

# IDs
uuid = { workspace = true }

# Internal deps (used by future M1 #008 embeddings handler; declared now so
# the dependency surface is settled).
nevoflux-llm = { path = "../llm", default-features = false, features = ["embedding"] }

[features]
# Exposes `serve_test_router` + `GatewayConfig::test_default` for in-process
# router testing via `tower::ServiceExt::oneshot`. Off by default so the
# helpers aren't shipped to production consumers; turned on automatically
# for the in-crate `tests/*.rs` binaries via the dev-dependency below.
test-util = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# M2-1: needed by `models_test.rs` for `Router::oneshot` and to collect
# response bodies into `Bytes`. Both crates are already transitive deps
# of axum/reqwest, so this only pins the API surface for the tests.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# For `live_smoke_test.rs` reading the user's real config.toml.
toml = "0.8"
dirs = "5"
# Re-pull our own crate as a dev-dep so the `test-util` feature is enabled
# for the integration tests in `tests/*.rs` (which compile as their own
# crates and don't otherwise see `cfg(test)` on the lib).
nevoflux-llm-gateway = { path = ".", features = ["test-util"] }
