# crates/llm/Cargo.toml

[package]
name = "nevoflux-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM Provider abstraction layer for NevoFlux Agent"

[features]
default = ["embedding"]
embedding = ["dep:fastembed", "dep:dirs"]

[dependencies]
rig-core = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-stream = { workspace = true, features = ["io-util"] }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
which = "7"
sacp = "10.1.0"
tokio-util = { version = "0.7", features = ["compat"] }
fastembed = { version = "4", optional = true }
dirs = { version = "5.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
mockall = { workspace = true }
toml = "0.8"
serde = { workspace = true }
