# crates/llm/Cargo.toml

[package]
name = "nevoflux-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM Provider abstraction layer for NevoFlux Agent"

[features]
default = ["embedding", "ort-download-binaries"]
embedding = ["dep:fastembed", "dep:dirs"]
# ONNX Runtime linking strategy for the `embedding` feature. Pick one:
#   * ort-download-binaries (default): statically link a prebuilt ONNX Runtime.
#     Self-contained binary, but the prebuilt lib's glibc floor applies.
#   * ort-load-dynamic: link nothing; load `libonnxruntime` at runtime via
#     ORT_DYLIB_PATH (or bundled next to the exe). Decouples the runtime's glibc
#     from the build, at the cost of shipping a version-matched library.
# When both are enabled (e.g. `--all-features`), `ort` gives load-dynamic
# precedence and does not statically link.
ort-download-binaries = ["fastembed?/ort-download-binaries"]
ort-load-dynamic = ["fastembed?/ort-load-dynamic"]

[dependencies]
rig-core = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-stream = { workspace = true, features = ["io-util"] }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
which = "7"
sacp = "10.1.0"
tokio-util = { version = "0.7", features = ["compat"] }
fastembed = { version = "4", optional = true, default-features = false, features = [
    "hf-hub-native-tls",
] }
dirs = { version = "5.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
mockall = { workspace = true }
toml = "0.8"
serde = { workspace = true }
