# crates/llm/Cargo.toml

[package]
name = "nevoflux-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM Provider abstraction layer for NevoFlux Agent"

[features]
default = ["embedding", "ort-load-dynamic"]
embedding = ["dep:fastembed", "dep:dirs"]
# ONNX Runtime linking strategy for the `embedding` feature. Pick one:
#   * ort-load-dynamic (default): link nothing; load `libonnxruntime` at runtime
#     via ORT_DYLIB_PATH (or bundled next to the exe). The default because the
#     prebuilt static runtime for ort rc.12 needs glibc >= 2.38, which excludes
#     Ubuntu 22.04 etc.; an official manylinux runtime (glibc >= 2.27) loaded
#     dynamically runs everywhere. Ship a version-matched library (see justfile
#     `ort-fetch`).
#   * ort-download-binaries: statically link a prebuilt ONNX Runtime.
#     Self-contained, but only builds/runs on hosts whose glibc satisfies the
#     prebuilt lib (rc.12 => glibc >= 2.38).
# When both are enabled (e.g. `--all-features`), `ort` gives load-dynamic
# precedence and does not statically link.
ort-download-binaries = ["fastembed?/ort-download-binaries"]
ort-load-dynamic = ["fastembed?/ort-load-dynamic"]

[dependencies]
nevoflux-protocol = { path = "../protocol" }
rig-core = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-stream = { workspace = true, features = ["io-util"] }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
which = "7"
sacp = "10.1.0"
tokio-util = { version = "0.7", features = ["compat"] }
fastembed = { version = "5", optional = true, default-features = false, features = [
    "hf-hub-native-tls",
] }
dirs = { version = "5.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
mockall = { workspace = true }
toml = "0.8"
serde = { workspace = true }
