# crates/mcp/Cargo.toml

[package]
name = "nevoflux-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "MCP (Model Context Protocol) client for NevoFlux Agent"

[features]
default = []
# Use custom McpClient instead of official rmcp SDK (legacy mode)
legacy-backend = []

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio = { workspace = true, features = ["process", "io-util", "io-std", "sync", "time"] }
async-trait.workspace = true
futures.workspace = true

# HTTP client (for SSE transport)
reqwest = { workspace = true, features = ["json", "stream"] }
tokio-stream.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing = "0.1"

# Official MCP SDK (default backend)
rmcp = { version = "0.14", features = ["client", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
